# hida

./: .gitignore  c_header_gen.py  cast_xml_parse.py  castxml.py  data.py  data_helpers.py  header_gen.py  manipulate.py  parse.py  pyproject.toml  python_gen.py  structs.py
headers/: all_types.h  arrays.h  basic.h  basic_types.h  basics.h  bitfield_holes.h  bitfields.h  bitfields_basic.h  class.h  complicated.h  complicated_structs.hpp  connected_filter.h  constants.h  enums.h  fixed_width.h  flat_enum.h  flat_nested.h  flatten.h  holes_real.h  includes.h  namespaced_types.h  namespaces.h  nested.h  packing.h  pointers.h  std_types.h  std_types_pointers.h  todo.md  typedef_remove.h  typedef_struct.h  typedefs.h  unions.h
headers/castxml/: all_types.xml  arrays.xml  basic.xml  basic_types.xml  basics.xml  bitfields.xml  bitfields_basic.xml  class.xml  complicated.xml  complicated_structs.xml  constants.xml  enums.xml  fixed_width.xml  namespaced_types.xml  namespaces.xml  nested.xml  packing.xml  pointers.xml  std_types.xml  std_types_pointers.xml  typedef_struct.xml  typedefs.xml  unions.xml
headers/castxml_linux/: basic.xml  bitfield_holes.xml  complicated_structs.xml  flat_enum.xml  flatten.xml
headers/castxml_linux2/: arrays.xml  bitfields_basic.xml  connected_filter.xml  holes_real.xml  packing.xml  typedef_remove.xml  typedefs.xml
src/hida/: __init__.py  cli.py  (+12 more)
test/: castxml_platform.py  conftest.py  test_c_header_gen.py  test_complicated.py  test_data_helpers.py  test_features.py  test_header_gen.py  test_ir_json.py  test_manipulate.py  test_python_gen.py
(+31 files in other folders)
