[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hida"
version = "0.7.0"
description = "CastXML XML → headers / Python code"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "gooznick" }]
dependencies = []  # add your runtime deps here

[project.scripts]
hida-castxml = "hida.castxml_cli:main"
hida = "hida.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
